[package]
name = "bscscan"
version = "0.3.2"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "BSC (Binance Smart Chain) non-async API in Rust"
license = "MIT"
keywords = ["blockchain", "crypto", "bsc", "bscscan", "binance"]
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/haxpor/bscscan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
primitive-types = { version = "0.11.1", features = ["impl-serde", "fp-conversion"] }

[dev-dependencies]
lazy_static = "1.4.0"
