[package]
name = "evmscan"
version = "0.5.1"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "Rust binding of non-async API for EVM-based chains which provided by team behinds etherscan.io, bscscan.com, and polygonscan.com"
license = "MIT"
keywords = ["offchain", "api", "polygonscan", "bscscan", "etherscan"]
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/haxpor/evmscan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
primitive-types = { version = "0.11.1", features = ["impl-serde", "fp-conversion"] }
regex = "1.5.5"

[dev-dependencies]
lazy_static = "1.4.0"
